latest version of paper is once again in sync with submitted_version_paper (and submitted)

--- a/submitted_version_paper.tex
+++ b/submitted_version_paper.tex
@@ -14,7 +14,6 @@
 \usepackage{url}
 \usepackage[english]{babel}
 
-
 \renewcommand{\ttdefault}{cmtt}
 %This version DOES NOT suppress line breaks
 % newcommands etc
@@ -89,7 +88,7 @@
 \author{Florian Kamm\"uller and Bianca Lutz}
 
 \institute{Middlesex University London and\\ Technische Universit\"at Berlin\\
-\email{f.kammueller@mdx.ac.uk|bialut@gmail.com}
+\email{f.kammueller@mdx.ac.uk|bianca.lutz@campus.tu-berlin.de}
 }
 \maketitle
 \begin{abstract}
@@ -119,16 +118,25 @@ have been in close proximity to a person who tested positive for COVID-19.
 %was a quite costly project but this was mainly due to the management of
 %Telekom and SAP being in the driving seat. But the app has been designed with great
 The app was designed with great
-attention on privacy: a distributed architecture \cite{cwa:arch} has been adopted after a long and
-heated debate with supporters of a central architecture. The distributed architecture is
-based on a very clever application design whereby users' phones broadcast
-highly anonymized so called ``Ephemeral IDs'' at physical locations via the
-Bluetooth Low Energy Beacon protocol.
-The app saves those IDs of people in close proximity.
-When at a later date an infected person reports his infection to a central server,
-all clients are provided the means to reconstruct the IDs used by this particular
-person's device over the last 14 days.
-Therefore, any client can evaluate exposure risks locally and stored contact data has never to be shared.
+attention on privacy: a distributed architecture \cite{cwa:arch} has been adopted %after a long and
+%heated debate with supporters of a central architecture. The distributed architecture is
+that is
+based on a very clever application design whereby clients broadcast
+highly anonymized so called ``Ephemeral IDs'' via Bluetooth and
+store those ids of people in close proximity.
+%highly anonymized so called ``Ephemeral IDs'' at physical locations via the
+%Bluetooth Low Energy Beacon protocol.
+%The app saves those ids of people in close proximity.
+Infected persons report their infection by uploading their ids to a central server, providing all clients the means to assess exposure risk locally,
+hence, stored contact data has never to be shared.
+%Infected persons report their infection to a central server,
+%which, in turn, provides all clients the means to reconstruct the ids
+%used by reported cases over the last 14 days.
+%
+%When at a later date an infected person reports his infection to a central server,
+%all clients are provided the means to reconstruct the ids used by this particular
+%person's device over the last 14 days.
+%Therefore, exposure risks can be evaluated locally and stored contact data has never to be shared.
 %
 %, the unique root ID is published
 %and in the daily check all mobile phones connecting to the central server download
@@ -168,11 +176,11 @@ However, there has, as of yet, to our knowledge no formal verification been invo
 Even if a ``post-production'' formal specification seems pointless, 
 it allows to reveal weak points of the architecture, show that the measures that have
 been conceived are suitable to cover those weak points,
-or where and to what extent trade offs have to be made due to inherent vulnerabilities.
+or to what extent trade offs have to be made due to inherent vulnerabilities.
 The protocol implemented by the framework CWA resembles only the most basic
-of the three proposed by the DP-3T project.
+of the three protocols proposed by the DP-3T project.
 Hence, a formal verified model that stresses the impact or limits of certain security measures
-might give more weight to appeals like \cite{dp3t:impl} 
+might give more weight to appeals like \cite{dp3t:impl}
 %to Apple and Google
 to adopt the more sophisticated protocols.
 %
@@ -188,8 +196,8 @@ based on attacks found by the attack tree analysis and (d) an application of the
 improve security of the Corona-virus app specification.
 
 In this paper, we first provide some background in Section \ref{sec:background}:
-we give a detailed overview of the development history %and security and privacy
-and relevant parts of the CWA (Section \ref{sec:history})
+we give a brief overview of related works
+and the protocol of the German app (Section \ref{sec:history}).
 We then introduce the Isabelle Infrastructure framework (Section \ref{sec:isainf}).
 Next, we present our model (Section \ref{sec:model}) and analysis of privacy and
 attacks (Section \ref{sec:ana}). The found attack on the first abstract specification
@@ -207,7 +215,7 @@ Isabelle (sources available \cite{kam:18smc}).
 We are mainly concerned with the architecture and protocols proposed by the
 DP-3T (\textit{Decentralized Privacy-Preserving Proximity Tracing}) project \cite{dp3t:github}.
 The main reason to focus on this particular family of protocols is the
-\textit{Exposure Notification Framework} (ENF) \cite{enf:proj}, jointly published by Apple and Google, that adopts
+\textit{Exposure Notification Framework} (ENF), jointly published by Apple and Google \cite{enf:proj}, that adopts
 %the main
 core principles of the DP-3T proposal. This API is not only used in the German
 CWA but has the potential of being widely adopted in future
@@ -215,21 +223,32 @@ app developments that might emerge due to the reach of players like Apple and Go
 
 There are, however, competing architectures noteworthy, namely protocols developed under the
 roof of the \textit{Pan-European Privacy-Preserving Proximity Tracing} project (PEPP-PT) \cite{pepppt:github}, e.g.
-PEPP-PT-ROBERT \cite{pepppt:ROBERT}.
+PEPP-PT-ROBERT \cite{pepppt:ROBERT},
+that might be characterized as centralized architectures.
 
 Neither DP-3T nor PEPP-PT are synonymous for just one single protocol. Each project endorses
 different protocols with unique properties in terms of privacy and data protection.
-Yet, on a higher level of abstraction, it seems feasible to distinguish two basic architectures:
-protocols as endorsed by PEPP-PT might be characterized as centralized architectures whereas
-DP-3T-inspired protocols follow a (more) decentralized approach.\footnote{%
-  DP-3T involves a central backend server. It is decentralized with regard to
-  the collection and evaluation of contact information:
-  In centralized architectures the server provides a risk scoring services, whereas decentralized
-  approaches rely on local risk assessment and, thus, do not need to share contact information with
-  the backend.}
-\\
+%Yet, on a higher level of abstraction, it seems feasible to distinguish two basic architectures:
+%protocols as endorsed by PEPP-PT might be characterized as centralized architectures whereas
+%DP-3T-inspired protocols follow a (more) decentralized approach.\footnote{%
+%  DP-3T involves a central backend server. It is decentralized with regard to
+%  the collection and evaluation of contact information:
+%  In centralized architectures the server provides a risk scoring services, whereas decentralized
+%  approaches rely on local risk assessment and, thus, do not need to share contact information with
+%  the backend.}
 
-All DP-3T protocols roughly work the same:
+There is a variety of noteworthy privacy and security issues. %that deserve formal consideration (and verification).
+The debate among %emerging between
+advocates of centralized architectures and those in favor of a decentralized approach in particular yields a lot of interesting material detailing different attacks and possible mitigation strategies: \cite{pepppt:dp3tana}, \cite{pepppt:dp3tresp}, \cite{dp3t:psre}.
+
+In terms of attack scenarios, we focus on, what might be classified as deanonymisation attacks: Tracking a device (see \cite{dp3t:psre}[p9], \cite{pepppt:dp3tana}[p8]) and identifying infected individuals (\cite{dp3t:psre}[p5], \cite{pepppt:dp3tana}[p9]).
+%As first step, both attacks start with deanonymizing Ephemeral Ids,
+%i.\,e. linking them the particular devices.
+%Both attacks rely on deanonymisation of Ephemeral Ids,
+%i.\,e. linking ids to particular devices.
+
+\subsubsection{Basic DP-3T architecture}
+%All DP-3T protocols roughly work the same:
 %\subsubsection{Basic DP-3T protocol: How does it work?}
 %  How does it relate to ENF/CWA? (broad strokes)}
 %
@@ -259,10 +278,10 @@ privacy and data protection properties to different degrees but are more costly 
 %hence, CWA follows this low-cost design.\TODOref{CWA solution architecture ($\rightarrow$ github:CWA); probably ENF specification} DP-3T proposes two other, more sophisticated protocols that improve
 %privacy and data protection properties to different degrees but are more costly.
 %%TODOfn[styC]{``complicated'' sounds lame but ``costly'' is, perhaps, to simple/literal} to set up.
-
+%\pagebreak
+%
 Figure \ref{fig:dp3tprot} illustrates the basic system architecture
 along with some of the mitigation measures either implemented in CWA or proposed by DP-3T.
-
 \begin{figure}[htb]
 \vspace{-.5cm}
   \begin{center}
@@ -273,6 +292,17 @@ along with some of the mitigation measures either implemented in CWA or proposed
   \label{fig:dp3tprot}
 \vspace{-.5cm}
 \end{figure}
+
+%\subsubsection{Attack scenarios}
+%There is a variety of noteworthy privacy and security issues. %that deserve formal consideration (and verification).
+%The debate among %emerging between
+%advocates of centralized architectures and those in favor of a decentralized approach in particular yields a lot of interesting material detailing different attacks and possible mitigation strategies: \cite{pepppt:dp3tana}, \cite{pepppt:dp3tresp}, \cite{dp3t:psre}.
+
+%In terms of attack scenarios, we focus on, what might be classified as deanonymisation attacks: Tracking a device (see \cite{dp3t:psre}[p9], \cite{pepppt:dp3tana}[p8]) and identifying infected individuals (\cite{dp3t:psre}[p5], \cite{pepppt:dp3tana}[p9]).
+%%As first step, both attacks start with deanonymizing Ephemeral Ids,
+%%i.\,e. linking them the particular devices.
+%Both attacks rely on deanonymisation of Ephemeral Ids,
+%i.\,e. linking ids to particular devices.
 
 \subsection{Isabelle Infrastructure framework}
 \label{sec:isainf}
@@ -321,7 +351,7 @@ are defined as a set of states reachable by $\mapsto$ from an initial
 state set, for example
 \begin{ttbox}
 Kripke \{t. \ttexists i \ttin I. i \ttrelIstar t\} I
-\end{ttbox} 
+\end{ttbox}
 \item {CTL statements:}\\ 
 For example, we can write 
 \begin{ttbox}
@@ -802,12 +832,12 @@ new type \texttt{efidlist}. Note, that in the new datatype \texttt{igraph} this 
 the third component, the credentials to become
 \begin{ttbox}
    identity \ttfun (string set \tttimes string set \tttimes efidlist)
-\end{ttbox}  
+\end{ttbox}
 The last two components, the set of currently present efids,
 and the knowledge set, remain the same and still operating on the simple type \texttt{efid}.
 %\begin{ttbox}
-%{\bf datatype} igraph = 
-%         Lgraph (location \tttimes location)set 
+%{\bf datatype} igraph =
+%         Lgraph (location \tttimes location)set
 %                 location \ttfun identity set
 %
 %                 location \ttfun string \tttimes (dlm \tttimes data) set
@@ -819,7 +849,7 @@ by the rule for the action \texttt{put} that resembles very much the rule for \t
 %\begin{ttbox}
 % {\bf{put}}: G = graphI I \ttImp  a \ttatI l \ttImp enables I l (Actor a) put \ttImp
 %      I' = Infrastructure (put_graph_efid A l (graphI I))(delta I)
-% \ttImp I \ttrelI I' 
+% \ttImp I \ttrelI I'
 %\end{ttbox}
 The important change to the infrastructure state is implemented in the function \texttt{put\_graph\_efid} that
 increases the current index in the \texttt{efidlist} in the credential component \texttt{cgra g n} for
