minor change regarding spelling of Ephemeral Ids

--- a/paper.tex
+++ b/paper.tex
@@ -120,7 +120,7 @@ attention on privacy: a distributed architecture \cite{cwa:arch} has been adopte
 %heated debate with supporters of a central architecture. The distributed architecture is
 that is
 based on a very clever application design whereby clients broadcast
-highly anonymized so called ``Ephemeral IDs'' via Bluetooth and
+highly anonymized so called ``Ephemeral Ids'' via Bluetooth and
 store those ids of people in close proximity.
 %highly anonymized so called ``Ephemeral IDs'' at physical locations via the
 %Bluetooth Low Energy Beacon protocol.
